[package]
name = "crumb"
description = "Falling sand game written in Rust"
readme = "README.md"
homepage = "https://github.com/skynse/crumb"
repository = "https://github.com/skynse/crumb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"


[dependencies.sdl2]
version = "0.35.2"
features = ["ttf"]


[profile.release]
debug = 1

# add assets/FiraBold.ttf to installation
[[bin]]
name = "crumb"
path = "src/main.rs"
install = true